Fixed bug in new menu: demo warning sign is overlapping menu item list

--- a/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
+++ b/VirtoCommerce.Platform.Web/Content/themes/main/css/base-modules.css
@@ -4641,7 +4641,7 @@ tags-input .tags .tag-item {
 .has-demo-warning .nav-bar,
 .has-demo-warning .nav-bar .dropdown,
 .has-demo-warning .cnt {
-    top: 28px;
+    top: 28px ! important;
 }
 /* Nav bar - Left navigation menu */
 .nav-bar {
